--- a/composer.json
+++ b/composer.json
@@ -8,8 +8,10 @@
     "require": {
         "php": "^8.2",
         "filament/filament": "3.3",
+        "flowframe/laravel-trend": "^0.4.0",
         "laravel/framework": "^12.0",
-        "laravel/tinker": "^2.10.1"
+        "laravel/tinker": "^2.10.1",
+        "symfony/mailer": "^7.2"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
